# mlops_exercises

./: .gitignore  Makefile  README.md  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt
.dvc/: .gitignore  config  config.local
.github/workflows/: cloudbuild.yaml  tests.yml
dockerfiles/: trainer.dockerfile  trainer_cloudbuild.dockerfile  wandb.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_exercises/: predict_model.py  train_model.py
mlops_exercises/data/: make_dataset.py
mlops_exercises/models/: model.py
notebooks/: Untitled.ipynb
tests/: __init__.py  test_data.py  test_train_model.py
